# qtcam

./: README.md  filter_tester.py  multiple_widgets.py  pyproject.toml  requirements.txt
.github/workflows/: publish.yml
qtcam/: __init__.py  filters.py  qtcam.py
